--- a/views/Facturacion/Modifica/boleta.html
+++ b/views/Facturacion/Modifica/boleta.html
@@ -116,6 +116,7 @@
                         <tbody>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">5411498</a></td>
                             <td><a href="../../carga_todos.html">14214222</a></td>
                             <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
@@ -128,6 +129,7 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">5411498</a></td>
                             <td><a href="../../carga_todos.html">14214222</a></td>
                             <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
@@ -141,6 +143,7 @@
 
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">5411498</a></td>
                             <td><a href="../../carga_todos.html">14214222</a></td>
                             <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
@@ -153,6 +156,7 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">5411498</a></td>
                             <td><a href="../../carga_todos.html">14214222</a></td>
                             <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
@@ -165,6 +169,7 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">5411498</a></td>
                             <td><a href="../../carga_todos.html">14214222</a></td>
                             <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
@@ -177,6 +182,7 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">5411498</a></td>
                             <td><a href="../../carga_todos.html">14214222</a></td>
                             <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
