--- a/views/Facturacion/Modifica/boleta.html
+++ b/views/Facturacion/Modifica/boleta.html
@@ -110,6 +110,7 @@
                             <th>Destino</th>
                             <th>Fecha</th>
                             <th>Estado</th>
+                            <th>Tarifa></th>
                             <th>Seleccionar</th>
                         </tr>
                         </thead>
@@ -123,7 +124,9 @@
 
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
+                            <td>14/04/17 15:14.15</td>
                             <td>EN VIAJE</td>
+
                             <td>360,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
@@ -136,6 +139,7 @@
 
                             <td>00 CD-SANTIAGO</td>
                             <td>17 TI-TALCA</td>
+                            <td>14/04/17 15:14.15</td>
                             <td>CERRADO</td>
                             <td>490,500</td>
                             <td><input type="checkbox" value="es"> </td>
@@ -150,6 +154,7 @@
 
                             <td>00 CD-SANTIAGO</td>
                             <td>15 ARICA</td>
+                            <td>14/04/17 15:14.15</td>
                             <td>CARGANDO</td>
                             <td>550,500</td>
                             <td><input type="checkbox" value="es"> </td>
@@ -176,6 +181,7 @@
 
                             <td>00 CD-SANTIAGO</td>
                             <td>36 ANTOFAGASTA</td>
+                            <td>14/04/17 15:14.15</td>
                             <td>ANULADO</td>
                             <td>705,000</td>
                             <td><input type="checkbox" value="es"> </td>
@@ -189,6 +195,7 @@
 
                             <td>00 CD-SANTIAGO</td>
                             <td>19 LA FLORIDA</td>
+                            <td>14/04/17 15:14.15</td>
                             <td>EN VIAJE</td>
                             <td>90,500</td>
                             <td><input type="checkbox" value="es"> </td>
