--- a/views/Facturacion/Modifica/boleta.html
+++ b/views/Facturacion/Modifica/boleta.html
@@ -140,7 +140,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>17 TI-TALCA</td>
                             <td>14/04/17 15:14.15</td>
-                            <td>CERRADO</td>
+                            <td>EN VIAJE</td>
                             <td>490,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
@@ -168,6 +168,7 @@
 
                             <td>00 CD-SANTIAGO</td>
                             <td>14 PUERTO MONTT</td>
+                            <td>14/04/17 15:14.15</td>
                             <td>CREADO</td>
                             <td>680,000</td>
                             <td><input type="checkbox" value="es"> </td>
