--- a/views/Consulta/Viajes/det_ddc.html
+++ b/views/Consulta/Viajes/det_ddc.html
@@ -4,11 +4,11 @@
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">Consulta</a></li>
         <li><a href="javascript:;">Viajes</a></li>
-        <li class="active">1020X - Detalle Viajes Troncal</li>
+        <li class="active">1020X - Detalle Viajes Despacho Directo Cliente</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Consulta Viaje Despacho Directo Cliente <small>Gestión de Consultas</small></h1>
+    <h1 class="page-header">Detalle Viaje Despacho Directo Cliente <small>Gestión de Consultas</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -70,7 +70,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Detalle del Viaje </h4>
+                    <h4 class="panel-title">Detalle de Documentos </h4>
                 </div>
 
                 <div class="panel-body">
