--- a/views/Facturacion/Aprobacion/apre_old.html
+++ b/views/Facturacion/Aprobacion/apre_old.html
@@ -6,7 +6,7 @@
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">Facturación</a></li>
         <li><a href="javascript:;">Aprueba OF</a></li>
-        <li class="active">20101 - Aprueba Orden de Facturación SEV</li>
+        <li class="active">20101 - Aprueba Orden de Facturación</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
@@ -45,11 +45,11 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">N&uacute;mero de Viaje</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="21365" />
+                                <input type="text" class="form-control" placeholder="10021" />
                             </div>
                             <label class="col-md-3 control-label">Tipo de Viaje</label>
                             <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="SEV" readonly="readonly" />
+                                <input type="text" class="form-control" placeholder="MOD" readonly="readonly" />
                             </div>
                         </div>
 
@@ -62,21 +62,19 @@
 									<thead>
 									<tr>
 										<th>Viaje</th>
-										<th>Tipo SEV</th>
-										<th>Viaje Asociado</th>
-										<th>Responsable</th>
-										<th>Unidades</th>		
+										<th>Origen</th>
+										<th>Destino</th>
+										<th>Fecha</th>		
 										<th>Tarifa</th>
 									</tr>
 									</thead>
 									<tbody>
 									<tr class="odd gradeX">
 										<td><a href="../../carga_todos.html">21365</a></td>
-										<td>ESCOLTA</td>
-										<td>21360</td>
-										<td>Bartolomeo Murdock</td>
-										<td>1</td>
-										<td>10.990</td>
+										<td>00 - CD-SANTIAGO</td>
+										<td>REPARTO</td>
+										<td>20/03/2017</td>
+										<td>360.500</td>
 									</tr>
 									
 									</tbody>
