--- a/views/Facturacion/Objeciones/responder.html
+++ b/views/Facturacion/Objeciones/responder.html
@@ -34,9 +34,16 @@
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="200021" />
                             </div>
-							<label class="col-md-2 control-label">Transportista</label>
+							<label class="col-md-2 control-label">Tipo Viaje</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="TRANSPORTES DEL PACIFICO" />
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>TRN</option>
+                                    <option>UM</option>
+									<option>DDC</option>
+									<option>SEV</option>
+									<option>MOD</option>
+                                </select>
                             </div>
                         </div>
 
@@ -67,6 +74,17 @@
                                 </div>
                             </div>
                         </div>
+						
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Transportista</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="TRANSPORTES DEL PACIFICO" />
+                            </div>
+                        </div>						
+							
+						
+						
+						
                         <div class="form-group">
                             <label class="col-md-3 control-label">Acciones:</label>
                             <div class="col-md-9">
