--- a/views/Consulta/Viajes/det_um.html
+++ b/views/Consulta/Viajes/det_um.html
@@ -8,7 +8,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Consulta Viaje Ultima Milla <small>Gestión de Consultas</small></h1>
+    <h1 class="page-header">Detalle Viaje Ultima Milla <small>Gestión de Consultas</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -51,8 +51,13 @@
                             </div>
                         </div>
                         
+						 <div class="form-group">
+                            <label class="col-md-3 control-label">Fecha Viaje</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="20/03/2017" />
+                            </div>
+                        </div>
                        
-
                        
                     </form>
                 </div>
@@ -70,7 +75,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Detalle del Viaje </h4>
+                    <h4 class="panel-title">Detalle de Documentos </h4>
                 </div>
 
                 <div class="panel-body">
