--- a/views/Facturacion/Modifica/boleta.html
+++ b/views/Facturacion/Modifica/boleta.html
@@ -39,6 +39,17 @@
                                 <input type="text" class="form-control" placeholder="14261913" />
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Numero de Viaje</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="210021" />
+                            </div>
+                            <label class="col-md-2 control-label">Valor de Boleta</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="5000" />
+                            </div>
+                        </div>
+
 
                         <div class="form-group">
                             <label class="col-md-3 control-label">Origen</label>
@@ -77,7 +88,12 @@
                                 </select>
                             </div>
                         </div>
-
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Enviar</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="PRO_CONS_PAT()">Buscar</button>
+                            </div>
+                        </div>
                     </form>
                 </div>
 
@@ -101,7 +117,7 @@
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>N° Despacho</th>
+                            <th>N° Viaje</th>
                             <th>N°MC</th>
                             <th>N°Boleta</th>
                             <th>N°Despacho ND</th>
@@ -145,7 +161,7 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
 
-                        <tr class="odd gradeX">
+                        <tr class="danger">
                             <td><a href="../../carga_todos.html">214222</a></td>
                             <td><a href="../../carga_todos.html">5411498</a></td>
                             <td><a href="../../carga_todos.html">14214222</a></td>
@@ -156,7 +172,7 @@
                             <td>15 ARICA</td>
                             <td>14/04/17 15:14.15</td>
                             <td>CARGANDO</td>
-                            <td>550,500</td>
+                            <td>1</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
