--- a/views/Facturacion/Modifica/boleta.html
+++ b/views/Facturacion/Modifica/boleta.html
@@ -126,7 +126,7 @@
                             <th>Destino</th>
                             <th>Fecha</th>
                             <th>Estado</th>
-                            <th>Tarifa></th>
+                            <th>Tarifa</th>
                             <th>Seleccionar</th>
                         </tr>
                         </thead>
