--- a/views/B2B/Transportista/facturacion.html
+++ b/views/B2B/Transportista/facturacion.html
@@ -32,7 +32,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">N&uacute;mero de OF</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="54" />
+                                <input type="text" class="form-control" placeholder="CPPL-54" />
                             </div>
 							<label class="col-md-2 control-label">N&uacute;mero de Viaje</label>
                             <div class="col-md-2">
@@ -40,13 +40,13 @@
                             </div>
                         </div>
 						<div class="form-group">
-                            <label class="col-md-3 control-label">N&uacute;mero de Patente</label>
+                            <label class="col-md-3 control-label">N&uacute;mero de Patente
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="CPPL-54" />
                             </div>
 							<label class="col-md-2 control-label">N&uacute;mero de Boleta</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="3590" />
+                                <input type="text" class="form-control" placeholder="10021" />
                             </div>
                         </div>
 						
@@ -82,11 +82,11 @@
 						<div class="form-group">
 							<label class="col-md-3 control-label">N&uacute;mero de ND</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="80540" />
+                                <input type="text" class="form-control" placeholder="222015" />
                             </div>
 							<label class="col-md-2 control-label">N&uacute;mero de Manifiesto de Carga</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="135050" />
+                                <input type="text" class="form-control" placeholder="1000" />
                             </div>
 						</div>
 
@@ -131,43 +131,43 @@
                         </thead>
                         <tbody>
 							<tr class="odd gradeX">
-								<td><a ui-sref="app.b2b.transportista.facturadetalle">150350</a></td>
+								<td><a href="../../carga_todos.html">150350</a></td>
 								<td>20/03/17</td>
 								<td>350.990</td>
 								<td>VALIDADA</td>
 								<td>10556</td>
-								<td> </td>
-								<td> </td>
+								<td>45850</td>
+								<td>APROBADA</td>
 								<td><input type="checkbox" value="es"> </td>
 							</tr>
 							<tr class="odd gradeX">
-								<td><a ui-sref="app.b2b.transportista.facturadetalle">150351</a></td>
+								<td><a href="../../carga_todos.html">150351</a></td>
 								<td>20/03/17</td>
 								<td>350.990</td>
 								<td>VALIDADA</td>
 								<td>10557</td>
-								<td> </td>
-								<td> </td>
+								<td>45850</td>
+								<td>APROBADA</td>
 								<td><input type="checkbox" value="es"> </td>
 							</tr>
 							<tr class="odd gradeX">
-								<td><a ui-sref="app.b2b.transportista.facturadetalle">150352</a></td>
+								<td><a href="../../carga_todos.html">150352</a></td>
 								<td>20/03/17</td>
 								<td>350.990</td>
 								<td>VALIDADA</td>
 								<td>10558</td>
-								<td> </td>
-								<td> </td>
+								<td>45850</td>
+								<td>APROBADA</td>
 								<td><input type="checkbox" value="es"> </td>
 							</tr>
 							<tr class="odd gradeX">
-								<td><a ui-sref="app.b2b.transportista.facturadetalle">150353</a></td>
+								<td><a href="../../carga_todos.html">150353</a></td>
 								<td>20/03/17</td>
 								<td>350.990</td>
 								<td>VALIDADA</td>
 								<td>10559</td>
-								<td> </td>
-								<td> </td>
+								<td>45850</td>
+								<td>APROBADA</td>
 								<td><input type="checkbox" value="es"> </td>
 							</tr>
                         </tbody>
@@ -179,9 +179,9 @@
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <button class="btn btn-success" ui-sref="app.b2b.transportista.edita_of">Editar</button>
-							<button class="btn btn-danger" >Anular</button>
-							<button class="btn btn-info"  ui-sref="app.b2b.transportista.factura" >Cancelar</button>
+                            <button class="btn btn-info" >Editar</button>
+							<button class="btn btn-info" >Anular</button>
+							<button class="btn btn-info" >Cancelar</button>
                         </p>
                     </div>
                 </div>
