--- a/views/Consulta/Supervisor/troncal.html
+++ b/views/Consulta/Supervisor/troncal.html
@@ -68,7 +68,15 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Estado</label>
+                            <label class="col-md-3 control-label">Estado Viaje</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>Cargando</option>
+                                    <option>Recibido</option>
+                                </select>
+                            </div>
+							<label class="col-md-2 control-label">Estado Faturacion</label>
                             <div class="col-md-2">
                                 <select class="form-control">
                                     <option>Todos</option>
@@ -77,7 +85,20 @@
                                 </select>
                             </div>
                         </div>
-
+						 <div class="form-group">
+                            <label class="col-md-3 control-label">Proveedor</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="TRANSPORTES DEL PACIFICO" />
+                            </div>
+							<label class="col-md-2 control-label">Tipo Cobro</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>Cargando</option>
+                                    <option>Recibido</option>
+                                </select>
+                            </div>
+                        </div>
                     </form>
                 </div>
 
@@ -101,13 +122,17 @@
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>N° Despacho</th>
+                            <th>N° Viaje</th>
                             <th>Proveedor</th>
-                            <th>Tipo de Camión</th>
+                            <th>Tipo de Vehículo</th>
                             <th>Origen</th>
                             <th>Destino</th>
-                            <th>Estado</th>
+                            <th>Estado Viaje</th>
+							<th>Tipo Viaje</th>
+							<th>Tipo Cobro</th>
+							<th>M3</th>
                             <th>Tarifa</th>
+							<th>Estado Facturación</th>
                             <th>Seleccionar</th>
                         </tr>
                         </thead>
@@ -119,7 +144,11 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>EN VIAJE</td>
+							<td>TRONCAL</td>
+							<td>Carg Completa</td>
+							<td>0</td>
                             <td>360,500</td>
+							<td>PENDIENTE OF</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
@@ -129,7 +158,11 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>17 TI-TALCA</td>
                             <td>CERRADO</td>
+							<td>TRONCAL</td>
+							<td>Carg Completa</td>
+							<td>0</td>
                             <td>490,500</td>
+							<td>PENDIENTE OF</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
@@ -139,7 +172,11 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>15 ARICA</td>
                             <td>CARGANDO</td>
+							<td>TRONCAL</td>
+							<td>Carg Completa</td>
+							<td>0</td>
                             <td>550,500</td>
+							<td>PENDIENTE OF</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
@@ -149,7 +186,11 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>14 PUERTO MONTT</td>
                             <td>CREADO</td>
+							<td>TRONCAL</td>
+							<td>Carg Completa</td>
+							<td>0</td>
                             <td>680,000</td>
+							<td>PENDIENTE OF</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
@@ -159,7 +200,11 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>36 ANTOFAGASTA</td>
                             <td>ANULADO</td>
+							<td>TRONCAL</td>
+							<td>Carg Completa</td>
+							<td>0</td>
                             <td>705,000</td>
+							<td>PENDIENTE OF</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
@@ -169,7 +214,11 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>19 LA FLORIDA</td>
                             <td>EN VIAJE</td>
+							<td>TRONCAL</td>
+							<td>Carg Completa</td>
+							<td>0</td>
                             <td>90,500</td>
+							<td>PENDIENTE OF</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         </tbody>
