--- a/views/Mantenedores/Tarifa/Troncal/consulta.html
+++ b/views/Mantenedores/Tarifa/Troncal/consulta.html
@@ -67,42 +67,7 @@
                                     <option>Otro</option>
                                 </select>
                             </div>
-							 <label class="col-md-3 control-label">Estado</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>HABILITADA</option>
-                                    <option>2 Transportes Pipau</option>
-                                    <option>3 Transportes del Pacifico</option>
-                                    <option>Otro</option>
-                                </select>
-                            </div>
-                        </div>
-						
-						
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Fecha de Inicio</label>
-                            <div class="col-md-2">
-                                <p class="input-group">
-                                    <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
-                                    <span class="input-group-btn">
-                                         <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
-                                     </span>
-                                </p>
-                            </div>
-                        
-                            <label class="col-md-3 control-label">Fecha de Termino</label>
-                            <div class="col-md-2">
-                                <p class="input-group">
-                                    <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
-                                    <span class="input-group-btn">
-                                         <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
-                                     </span>
-                                </p>
-                            </div>
-                        </div>
-						
-						<div class="form-group">
-                            <label class="col-md-3 control-label">Metodo</label>
+							 <label class="col-md-3 control-label">Metodo</label>
                             <div class="col-md-2">
                                 <select class="form-control">
                                     <option>12 Transportes Montes</option>
@@ -111,6 +76,12 @@
                                     <option>Otro</option>
                                 </select>
                             </div>
+                        </div>
+						
+						
+                        
+						
+						<div class="form-group">
 							<label class="col-md-3 control-label">Categoria</label>
                             <div class="col-md-2">
                                 <select class="form-control">
@@ -120,11 +91,7 @@
                                     <option>Otro</option>
                                 </select>
                             </div>
-                        </div>
-						
-
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">NS</label>
+							<label class="col-md-3 control-label">NS</label>
                             <div class="col-md-2">
                                 <select class="form-control">
                                     <option>Si</option>
@@ -132,34 +99,13 @@
 
                                 </select>
                             </div>
-							
-							<label class="col-md-3 control-label">Valor</label>
-                            <div class="col-md-2">
-                                <input type="number" class="form-control" placeholder="" />
-                            </div>
-                            
-                        </div>
-						
-						<div class="form-group">
-                            <label class="col-md-3 control-label">Tarifa</label>
-                            <div class="col-md-2">
-                                <input type="number" class="form-control" placeholder="123434" />
-                            </div>
-							
-							<label class="col-md-3 control-label">Estado</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>HABILITADA</option>
-                                    <option>SUSPENDIDA</option>
-                                </select>
-                            </div>
                         </div>
 						
                         <div class="form-group">
                             <label class="col-md-3 control-label">Acciones : </label>
                             <div class="col-md-3">
-                                <button type="submit" class="btn btn-sm btn-success" ng-click = "PRO_AGR_TARF_TRON()">Grabar</button>
-                                <button class="btn btn-sm btn-info" ui-sref="app.mantenedores.tarifa.troncal.consulta"  >Cancelar</button>
+                                <button type="submit" class="btn btn-sm btn-success" ng-click = "PRO_AGR_TARF_TRON()">Consultar</button>
+                                
                             </div>
                         </div>
                     </form>
@@ -176,31 +122,82 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Carga Masiva de Tarifas</h4>
+                    <h4 class="panel-title">Listado de Tarifas Creadas</h4>
                 </div>
+               
                 <div class="panel-body">
-                    <form class="form-horizontal">
-
-						<div class="form-group">
-							<label class="col-md-3 control-label">Carga Masiva</label>
-							<div class="col-md-3 control-label">
-								<input ng-model='file' type="file"/>
-							</div>
-							<div class="col-md-3">
-								<button type="submit" class="btn btn-sm btn-success" ng-click = "">Cargar</button>
-							</div>
-						</div>
-						
-						<div class="form-group">
-							<label class="col-md-3 control-label">Descargar Planilla Tarifas</label>
-							<div class="col-md-3 control-label">
-								<a href="#"> Descargar</a>
-							</div>
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N° Viaje</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Categoria</th>
+							<th>Metodo</th>
+							<th>Transportista</th>
+							<th>NS</th>
+                            <th>Valor</th>
 							
-						</div>
-
-                    </form>
+                            <th>Modificar</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td>UM</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>TM</td>
+							<td>1</td>
+							<td>TRANSPORTES DEL PACIFICO</td>
+							<td>0.95</td>
+                            <td>360,500</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                       <tr class="odd gradeX">
+                            <td>UM</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>TM</td>
+							<td>1</td>
+							<td>TRANSPORTES DEL PACIFICO 2</td>
+							<td>0.95</td>
+                            <td>360,500</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+						<tr class="odd gradeX">
+                            <td>UM</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>TM</td>
+							<td>1</td>
+							<td>TRANSPORTES DEL PACIFICO 3</td>
+							<td>0.95</td>
+                            <td>360,500</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        </tbody>
+                    </table>
+					
+					<div class="col-md-1">
+                        <p>
+                           &nbsp;
+                        </p>
+                    </div>
+                    <div class="col-md-1">
+                        <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <button class="btn btn-success " ui-sref="app.mantenedores.tarifa.troncal.agregar" >Modificar Tarifa </button>
+							&nbsp;
+							<button class="btn btn-success " ui-sref="app.mantenedores.tarifa.troncal.agregar" >Crear Nueva Tarifa </button>
+                            
+                        </p>
+                    </div>
                 </div>
+
             </div>
             <!-- end panel -->
         </div>
